--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import "../../node_modules/.pnpm/tailwindcss@4.1.13/node_modules/tailwindcss/dist/lib.d.mts";
 
 @theme {
     --color-white: #ffffff;
